# BMS-LTC6804

./: .gitignore  README.md
src/: CMakeLists.txt  partitions.csv
src/bms/: CMakeLists.txt  adc.c  adc.h  bms_adapter.c  bms_adapter.h  bms_configuration.c  bms_configuration.h  bms_data.h  intercore_comm.c  intercore_comm.h  ltc6804.c  ltc6804.h
src/common/: CMakeLists.txt  led_control.c  led_control.h  logging.c  logging.h  telemetry.c  telemetry.h  watchdog.c  watchdog.h
src/http/: CMakeLists.txt  http_server.c  http_server.h  stats_history.c  stats_history.h
src/main/: CMakeLists.txt  app_tasks.c  app_tasks.h  appsm.c  appsm.h  initialization.c  initialization.h  main.c  spiffs.c  spiffs.h  tasksFC.c  tasksFC.h  tasksSC.c  tasksSC.h
src/process/: CMakeLists.txt  json_formatter.c  json_formatter.h  process.c  process.h
src/process/configuration/: CMakeLists.txt  configuration.c  configuration.h
src/process/network/: CMakeLists.txt  Kconfig.projbuild  mqtt.c  mqtt.h  network_configuration.h  wifi.c  wifi.h
src/spiffs/: config.json
src/spiffs/bms/: config.html  config_canceled.html  config_saved.html  error_modal.html  index.html  stats.html
src/spiffs/bms/css/: style.css
src/spiffs/bms/js/: batteries.js  charts.js
tools/: parse_telemetry.py
tools/build_utils/: build_bms.sh  flash.sh  idf_init.sh
tools/data-visualization/: grafana_dashboard.json
tools/data-visualization/docker/: docker-compose.yml  setup.sh
tools/design/: Doxyfile  run_doxygen.sh
tools/telemetry-parser/: gui.py  main.py  parse_telemetry.py  version.py
(+1 files in other folders)
